--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "hardevine/shoppingcart": "^3.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "yajra/laravel-datatables-oracle": "10.3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
