--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     },
     "devDependencies": {
         "axios": "^1.6.4",
+        "laravel-datatables-vite": "^0.5.2",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
     },
     "dependencies": {
         "bootstrap": "^5.3.2",
+        "datatables.net-dt": "^2.0.3",
         "jquery": "^3.7.1"
     }
 }
